--- a/assignment1.html
+++ b/assignment1.html
@@ -1,6 +1,5 @@
-<!-- 
+<!--
   Assignment #1 - REMEMBER TO FOLLOW THE STYLE GUIDE
-
   1. Fork your own version of this repo
   2. Create a branch named <your-name>-assignment1 (in my case it would be mattbowytz-assignment1)
   3. Basing your code off of the below example, tell me a little bit about yourself
@@ -8,21 +7,27 @@
 
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <title>Assignment 1</title>
-  </head>
-  <body>
-    <!--
-      In this section (<body>), create a h1 tag stating your name
-      Beneath that, create an unordered list with at least 3 list items
-      that describe your web development experience (if any, it's ok if this is all new :D)
+</head>
+<body>
+<!--
+  In this section (<body>), create a h1 tag stating your name
+  Beneath that, create an unordered list with at least 3 list items
+  that describe your web development experience (if any, it's ok if this is all new :D)
+  This is just a quick exercise to show that you know how to work with git and GitHub
+  No styling or scripting is required for this assignment
+  If you don't know how to make the above mentioned tags, either take a look around on
+  the internet, or don't hesitate to ask me!
+-->
 
-      This is just a quick exercise to show that you know how to work with git and GitHub
-      No styling or scripting is required for this assignment
-
-      If you don't know how to make the above mentioned tags, either take a look around on
-      the internet, or don't hesitate to ask me!
-    -->
-  </body>
+    <h1>My name is Austin Martin</h1>
+    <ul>
+        <li>I am a computer science minor here at Pitt</li>
+        <li>I have messed around with web development on my own for about three years</li>
+        <li>I have had a small amount of web development instruction from a information science class</li>
+        <li>I am excited to learn about web development!</li>
+    </ul>
+</body>
 </html>
